plugins {
    id 'dev.architectury.loom' version '1.13-SNAPSHOT' apply false
    id 'architectury-plugin' version '3.4-SNAPSHOT'
    id 'com.gradleup.shadow' version '8.3.6' apply false
}

architectury {
    minecraft = "$minecraft_version"
}

allprojects {
    apply plugin: 'architectury-plugin'
    apply plugin: 'maven-publish'
    apply plugin: 'java'

    group = "$maven_group"
    version = "${mod_version}+${minecraft_version}"

    repositories {
        maven {
            name = "NeoForged"
            url = "https://maven.neoforged.net/releases/"
        }
        maven {
            name = "TerraformersMC"
            url = "https://maven.terraformersmc.com/releases/"
        }
        maven {
            name = "Shedaniel"
            url = "https://maven.shedaniel.me/"
        }
        maven {
            name = "Jared's maven"
            url = "https://maven.blamejared.com/"
        }
        maven {
            name = "Modrinth Maven"
            url = "https://api.modrinth.com/maven"
            content {
                includeGroup "maven.modrinth"
            }
        }
    }
}

subprojects {
    apply plugin: 'dev.architectury.loom'

    base {
        archivesName = "$mod_id-$name"
    }

    loom {
        silentMojangMappingsLicense()
    }

    repositories {
    }

    dependencies {
        minecraft "net.minecraft:minecraft:$minecraft_version"
        mappings loom.officialMojangMappings()
    }

    java {
        withSourcesJar()

        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }

    tasks.withType(JavaCompile).configureEach {
        it.options.release = 21
    }

    publishing {
        publications {
            mavenJava(MavenPublication) {
                artifactId = base.archivesName.get()
                from components.java
            }
        }

        // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
        repositories {
        }
    }
}